# aoc2022

./: Cargo.toml
hs/: .gitignore  day1.hs  day10.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day9.hs  stack.yaml
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
